minor exception handler update